[package]
name = "observer"
version = "1.0.1"
edition = "2024"


[dependencies]
##POSTGRES"
sqlx = { version = "0.8.5", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
    "bigdecimal",
    "chrono",
    "json",
    "macros",

] }

redis = { version = "0.29.0", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
    "json",
    "aio",
    "connection-manager",
] }

#Big Decimal
bigdecimal = "0.4.5"


#LOG
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "time",
    "env-filter",
    "json",
    "registry",
    "ansi",
] }
#ASYNC


tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"

#EVM
alloy = { version = "=1.0.24", features = ["full", "signer-keystore"] }

#CLI
clap = { version = "4.4.12", features = ["derive"] }

#DOTENV
dotenv = "0.15.0"

#RESULT
anyhow = "1.0.89"

#RAND
rand = "0.8.5"

#JSON
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0.210", features = ["derive"] }
axum = "0.7"
chrono = "0.4.38"
strum = "0.26.3"
enum-iterator = "2.1.0"
lazy_static = "1.5.0"
async-trait = "0.1"
csv = "1.3.0"


reqwest = { version = "0.12", features = ["json"] }

derive_more = { version = "1.0.0", features = ["display"] }

toml = "0.8.20"

#PROMETHEUS METRICS
prometheus = "0.13.4"

#CROSSBEAM
# crossbeam-utils = "0.8.4"

#ONCE_CELL
once_cell = "1.21.2"
tokio-tungstenite = "0.27.0"

#CACHE
moka = { version = "0.12", features = ["future"] }
dashmap = "6.1.0"


[dev-dependencies]
# 테스트 관련 의존성
lazy_static = "1.5.0"
tokio = { version = "1.40.0", features = ["test-util"] }
uuid = { version = "1.10.0", features = ["v4"] }
testcontainers-modules = { version = "0.11", features = ["postgres"] }
